--- a/index.html
+++ b/index.html
@@ -11,12 +11,74 @@
     <link rel="stylesheet" href="css/accessibility.css">
 </head>
 <body>
+    <a href="#main" class="skip-link">Skip to main content</a>
+
     <header>
-        <!-- Navigation will be added in Phase 3 -->
+        <nav aria-label="Main navigation" class="nav-header">
+            <div class="container">
+                <div class="nav-content">
+                    <div class="nav-brand">
+                        <strong>Vandaemon</strong>
+                    </div>
+                    <ul class="nav-links">
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#demo">Demo</a></li>
+                        <li><a href="#github">GitHub</a></li>
+                        <li><a href="#getting-started">Get Started</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main id="main">
-        <!-- Content sections will be added in subsequent phases -->
+        <!-- Hero Section -->
+        <section id="hero" class="hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h1>Efficient Daemon Management Made Simple</h1>
+                    <p class="tagline">Vandaemon provides powerful, lightweight daemon process management with intuitive controls and real-time monitoring.</p>
+                    <div class="cta-buttons">
+                        <a href="#demo" class="btn btn-primary">Try Live Demo</a>
+                        <a href="https://github.com/stuartf303/vandaemon" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">View on GitHub</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Features Section -->
+        <section id="features" class="features">
+            <div class="container">
+                <h2 class="text-center">Key Features</h2>
+                <div class="feature-grid">
+                    <article class="feature-card">
+                        <div class="feature-icon">⚡</div>
+                        <h3>Lightning Fast</h3>
+                        <p>Minimal overhead and optimized performance ensure your daemons run efficiently without consuming unnecessary resources.</p>
+                    </article>
+                    <article class="feature-card">
+                        <div class="feature-icon">🔧</div>
+                        <h3>Easy Configuration</h3>
+                        <p>Simple, declarative configuration files make it easy to define and manage daemon processes without complex setup.</p>
+                    </article>
+                    <article class="feature-card">
+                        <div class="feature-icon">📊</div>
+                        <h3>Real-Time Monitoring</h3>
+                        <p>Monitor daemon status, resource usage, and logs in real-time with built-in observability features.</p>
+                    </article>
+                    <article class="feature-card">
+                        <div class="feature-icon">🔒</div>
+                        <h3>Secure by Default</h3>
+                        <p>Built with security in mind, featuring process isolation, permission management, and safe restart mechanisms.</p>
+                    </article>
+                    <article class="feature-card">
+                        <div class="feature-icon">🔄</div>
+                        <h3>Automatic Restarts</h3>
+                        <p>Intelligent crash recovery and automatic restart policies keep your services running reliably 24/7.</p>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
