--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Google Analytics 4 -->
     <!-- Replace G-XXXXXXXXXX with your actual GA4 Measurement ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E09FC5Y8J4"></script>
     <script src="js/analytics.js"></script>
 </head>
 <body>
